Mount sample data directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,4 @@ services:
             - 8888:8888
         volumes:
             - ./services/jupyter/src/:/home/jovyan/work/
+            - ./data:/data/
